--- a/Практос5.ipynb
+++ b/Практос5.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "[1000 rows x 8 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "[1000 rows x 8 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В данном методе мы выводим общую иноформаци о колонках, типе данных, количество использованной информации, количество не пустых значений в каждом столбце"
+    "В данном методе мы выводим общую иноформацию о колонках, типе данных, количество использованной информации, количество не пустых значений в каждом столбце. В данной работе 8 колонок, типы: int64(3), object(5), количество использованной информации 62.6+ KB, количество не пустых значений в каждом столбце 1000 entries, 0 to 999 "
    ]
   },
   {
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +722,7 @@
        "999                    none          77             86             86  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +913,7 @@
        "max     100.00000     100.000000     100.000000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +926,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Метод describe() предоставляет статистическое описание числовых данных в DataFrame. Этот метод возвращает основные статистические показатели для каждого числового столбца, такие как количество, среднее значение, стандартное отклонение, минимальное и максимальное значения, медиана и квартили."
+    "Метод describe() предоставляет статистическое описание числовых данных в DataFrame. Этот метод возвращает основные статистические показатели для каждого числового столбца, такие как количество, среднее значение, стандартное отклонение, минимальное и максимальное значения, медиана и квартили. \n",
+    "\n",
+    "В моем проекте:\n",
+    "\n",
+    " Количество непустых значений: math score, reading score, writing score имеет значение 1000.00000\n",
+    "\n",
+    " Среднее арифметическое значение: math score = 66.08900, reading score = 69.169000, writing score = 68.054000\n",
+    "\n",
+    " Стандартное отклонение: math score = 15.16308, reading score = 14.600192, writing score = 15.195657\n",
+    "\n",
+    " Минимальное значение: math score = 0.00000, reading score = 17.000000, writing score = 10.000000\n",
+    "\n",
+    " 25% (первый квартиль): math score = 66.00000, reading score = 59.000000, writing score = 57.750000\n",
+    "\n",
+    " 50% (медиана):  math score = 57.00000, reading score = 70.000000, writing score = 69.000000\n",
+    "\n",
+    " 75% (третий квартиль):  math score = 77.00000, reading score = 79.000000, writing score = 79.000000\n",
+    "\n",
+    " Максимальное значение в столбце: math score = 100.00000, reading score = 100.00000, writing score = 100.00000\n",
+    "\n"
    ]
   },
   {
@@ -936,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +972,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +1010,7 @@
        "        19,  23,   8], dtype=int64)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1224,7 @@
        "[1000 rows x 8 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1228,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1287,7 +1306,7 @@
        "2  female  standard        group B"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1311,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1502,7 +1521,7 @@
        "[1000 rows x 8 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1713,7 +1732,7 @@
        "[1000 rows x 7 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
